[package]
name = "bitonic_sorter"
version = "0.1.0"
authors = ["yongikim <yongi.kim08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
rand = "0.7.3"
rand_pcg = "0.2.1"
rayon = "1.5.0"
